k8s/blog-posts-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: blog-posts-java-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: blog-posts-java
  template:
    metadata:
      labels:
        app: blog-posts-java
    spec:
      containers:
        - name: blog-posts-java
          image: darglk/blog-posts:latest
          imagePullPolicy: Never
---
apiVersion: v1
kind: Service
metadata:
  name: blog-posts-java-srv
spec:
  selector:
    app: blog-posts-java
  ports:
    - name: blog-posts-java
      protocol: TCP
      port: 8080
      targetPort: 8080
