k8s/keycloak-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: keycloak-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: keycloak
  template:
    metadata:
      labels:
        app: keycloak
    spec:
      containers:
        - name: keycloak
          image: darglk/keycloak:latest
          imagePullPolicy: Never
---
apiVersion: v1
kind: Service
metadata:
  name: keycloak-srv
spec:
  selector:
    app: keycloak
  ports:
    - name: keycloak
      protocol: TCP
      port: 8080
      targetPort: 8080
