k8s/keycloak-postgres-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: keycloak-postgres-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: keycloak-postgres
  template:
    metadata:
      labels:
        app: keycloak-postgres
    spec:
      containers:
        - name: keycloak-postgres
          image: postgres
---
apiVersion: v1
kind: Service
metadata:
  name: keycloak-postgres-srv
spec:
  selector:
    app: keycloak-postgres
  ports:
    - name: db
      protocol: TCP
      port: 5432
      targetPort: 5432
