k8s/ingress-srv.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/proxy-buffer-size: "256k"
spec:
  rules:
    - host: blog-java.dev
      http:
        paths:
          - path: /api/v1/users/?(.*)
            pathType: Prefix
            backend:
              service:
                name: blog-auth-java-srv
                port:
                  number: 8080
          - path: /api/v1/posts/?(.*)
            pathType: Prefix
            backend:
              service:
                name: blog-posts-java-srv
                port:
                  number: 8080
          - path: /realms
            pathType: Prefix
            backend:
              service:
                name: keycloak-srv
                port:
                  number: 8080
          - path: /admin
            pathType: Prefix
            backend:
              service:
                name: keycloak-srv
                port:
                  number: 8080
          - path: /js
            pathType: Prefix
            backend:
              service:
                name: keycloak-srv
                port:
                  number: 8080
          - path: /welcome
            pathType: Prefix
            backend:
              service:
                name: keycloak-srv
                port:
                  number: 8080
          - path: /metrics
            pathType: Prefix
            backend:
              service:
                name: keycloak-srv
                port:
                  number: 8080
          - path: /health
            pathType: Prefix
            backend:
              service:
                name: keycloak-srv
                port:
                  number: 8080
          - path: /resources
            pathType: Prefix
            backend:
              service:
                name: keycloak-srv
                port:
                  number: 8080
          #  - path: /admin/?(.*)
          #    pathType: Prefix
          #    backend:
          #     service:
          #       name: keycloak-srv
          #       port:
          #         number: 8080
